2010-12-06  rocky <rocky@gnu.org>

	* ChangeLog, NEWS, test/integration/.gitignore: Administrivia

2010-12-02  rocky <rocky@gnu.org>

	* command/handle.sh, lib/sig.sh: signal handling: Make it easier to
	sync with zshdb.

2010-12-02  rocky <rocky@gnu.org>

	* ChangeLog, test/example/hanoi.sh.in, test/example/settrace.sh,
	test/integration/settrace.tests, test/integration/test-debug.in,
	test/integration/test-misc.in, test/integration/trace.tests,
	test/integration/trace2.tests: "make distcheck" works again!

2010-12-02  rocky <rocky@gnu.org>

	* ChangeLog, test/data/restart.cmd, test/data/restart.right,
	test/example/Makefile.am, test/example/restart.sh,
	test/example/restartbug.sh, test/integration/settrace.tests,
	test/integration/sopts.tests, test/integration/test-restart,
	test/integration/test-tbreak, test/integration/test-trace,
	test/integration/trace.tests, test/integration/trace2.tests: More
	integration tests work when built outside of source tree.

2010-12-01  rocky <rocky@gnu.org>

	* ChangeLog, Makefile.am: One more @BASHDB_MAIN@ -> @DBGR_MAIN@
	which had messed up install hook.

2010-12-01  rocky <rocky@gnu.org>

	* test/data/setshow.right: Update output

2010-11-30  rocky <rocky@gnu.org>

	* test/integration/Makefile.am, test/integration/setshow.tests,
	test/integration/subshell1.tests, test/integration/subshell2.tests,
	test/integration/subshell3.tests, test/integration/subshell4.tests,
	test/integration/test-interrupt, test/integration/test-lopts,
	test/integration/test-setshow.in, test/integration/test-sig.in,
	test/integration/test-subshell: A couple more tests work when
	building outside source tree.

2010-11-30  rocky <rocky@gnu.org>

	* command/kill.sh, test/integration/Makefile.am,
	test/integration/brkpt1.tests, test/integration/brkpt2.tests,
	test/integration/brkpt3.tests, test/integration/test-brkpt,
	test/integration/test-multi: Simplify breakpoint integration test
	now runs not building from source tree. Adjust indentation in "kill"