@@ -34,10 +34,10 @@ L
 where 2
 ###  Try up...
 up
-list
+list>
 ###  Try down 1...
 down 1
-list
+list>
 ###  frame 0...
 frame 0
 ###  Try step (twice)...
