@@ -4,6 +4,18 @@
 +# 
 +### List default location
 +list 
+ 17:    fn3() {
+ 18:        name="fn3"
+ 19:        x=$1
+ 20:    }    
+ 21:    
+ 22: => x=22
+ 23:    y=23
+ 24:    for i in 0 1 3 ; do
+ 25:      ((x += i))
+ 26:    done
++### Should list next set of lines
++l 
  22: => x=22
  23:    y=23
  24:    for i in 0 1 3 ; do
@@ -14,12 +26,6 @@
  29:    x=29
  30:    echo $(fn3 30)
  31:    fn3 31
-+### Should list next set of lines
-+l 
- 32:    fn1;
- 33:    fn3 33
- 34:    source ../example/dbg-test1.sub
- 35:    exit 0;
 +# 
 +# Should not see anything since we ran off the top
 +# 
@@ -39,23 +45,27 @@
   9:    }    
  10:    
 +list ../example/dbg-test1.sh:20
+ 15:    }    
+ 16:    
+ 17:    fn3() {
+ 18:        name="fn3"
+ 19:        x=$1
  20:    }    
  21:    
  22: => x=22
  23:    y=23
  24:    for i in 0 1 3 ; do
++list ../example/dbg-test1.sh:30
  25:      ((x += i))
  26:    done
  27:    x=27
  28:    y=b
  29:    x=29
-+list ../example/dbg-test1.sh:30
  30:    echo $(fn3 30)
  31:    fn3 31
  32:    fn1;
  33:    fn3 33
  34:    source ../example/dbg-test1.sub
- 35:    exit 0;
 +list ../example//dbg-test1.sh:999
 ** Line 999 is too large. File dbg-test1.sh has only 35 lines.
 +list ./badfile:1
@@ -66,16 +76,16 @@
 +set trace-commands on
 +### list of functions...
 +list fn1
+  1:    #!/usr/bin/env bash
+  2:    # Note: no CVS Id line since it would mess up regression testing.
+  3:    # This code is used for various debugger testing.
+  4:    
   5:    fn1() {
   6:        echo "fn1 here"
   7:        x=5
   8:        fn3
   9:    }    
  10:    
- 11:    fn2() {
- 12:        name="fn2"
- 13:        echo "$name here"
- 14:        x=6
 +list bogus
 ** Invalid line specification: bogus
 ** File "" not found in read-in files.
@@ -84,8 +94,6 @@
 +######################################################### 
 +### Testing '.'
 +l .
- 15:    }    
- 16:    
  17:    fn3() {
  18:        name="fn3"
  19:        x=$1
@@ -94,50 +102,38 @@
  22: => x=22
  23:    y=23
  24:    for i in 0 1 3 ; do
+ 25:      ((x += i))
+ 26:    done
 +# 
 +# Should see lines up to current execution line.
 +### Trying '-'...
-+- 
- 13:        echo "$name here"
- 14:        x=6
- 15:    }    
- 16:    
- 17:    fn3() {
- 18:        name="fn3"
- 19:        x=$1
- 20:    }    
- 21:    
- 22: => x=22
++l -
+  2:    # Note: no CVS Id line since it would mess up regression testing.
+  3:    # This code is used for various debugger testing.
+  4:    
+  5:    fn1() {
+  6:        echo "fn1 here"
+  7:        x=5
+  8:        fn3
+  9:    }    
+ 10:    
+ 11:    fn2() {
 +### Testing set/show listsize
 +show listsize
 Number of source lines bashdb will list by default is 10.
 +### Setting listsize to 3...
 +set listsize 3
 +l 10
+  9:    }    
  10:    
  11:    fn2() {
- 12:        name="fn2"
-+p "- command..."
-- command...
-+- 
- 20:    }    
- 21:    
- 22: => x=22
 +### Setting listsize to 4...
 +set listsize 4
 +show listsize
 Number of source lines bashdb will list by default is 4.
 +l 10
+  8:        fn3
+  9:    }    
  10:    
  11:    fn2() {
- 12:        name="fn2"
- 13:        echo "$name here"
-+### '-' command...
-+- 
- 19:        x=$1
- 20:    }    
- 21:    
- 22: => x=22
-+#<-This comment doesn't have a space after
-+#the initial `#'
 +quit 
