@@ -1,6 +1,6 @@
 set trace-commands on
 # 2nd part of Restart test
-l
+l>
 info break
 cont
 quit
