@@ -9,7 +9,7 @@ set trace-commands on
 ?
 ###  Above search should reset list line below list start.
 ###  Should get same line as line above...
-list
+list>
 ###  Try forward search /fn1/. Should be line we got command before last ...
 /fn1/
 ###  Try a backward search ?fn3? ...
