@@ -1,7 +1,7 @@
 set trace-commands on
 # Test set_trace call.
 where
-list 5
+list> 5
 info files
 c
 where
