@@ -5,7 +5,7 @@
 ->0 in file `settrace.sh' at line 6
 ##1 init() called from file `settrace.sh' at line 42
 ##2 main() called from file `settrace.sh' at line 0
-+list 5
++list> 5
   5:    init() {
   6: =>   _Dbg_debugger; :
   7:    }
