@@ -1,3 +1,8 @@
+2010-12-07  rocky <rocky@gnu.org>
+
+	* ChangeLog, doc/bashdb.texi: Add autolist and update help lists.
+	Start noting differences in Emacs interaction.
+
 2010-12-06  rocky <rocky@gnu.org>
 
 	* ChangeLog, NEWS, test/integration/.gitignore: Administrivia
